--- a/css/style-light.css
+++ b/css/style-light.css
@@ -328,14 +328,18 @@ span{
 }
 #theme-switch{
 	position: absolute;
-right: 20px;
-top: 20px;
-font-size: 25px;
-background-color: #031024;
-padding: 8px;
-border-radius: 50%;
-text-align: center;
-color: #bfbfbf;
-cursor: pointer;
-
+	display: table;
+	width: 50px;
+	height: 50px;
+	background-color: #031024;
+	border-radius: 999px;
+	top: 20px;
+	right: 20px;
+}
+#theme-switch-icon{
+	display: table-cell;
+	vertical-align: middle;
+	text-align: center;
+	font-size: 30px;
+	color: #fff;
 }
