--- a/css/style.css
+++ b/css/style.css
@@ -330,14 +330,21 @@ span{
 	text-align: center;
 }
 #theme-switch{
-position: absolute;
-right: 20px;
-top: 20px;
-font-size: 25px;
-background-color: white;
-padding: 7px;
-border-radius: 50%;
-text-align: center;
-color: darkgoldenrod;
-cursor: pointer;
+	position: absolute;
+	display: table;
+	width: 50px;
+	height: 50px;
+	background-color: white;
+	border-radius: 999px;
+	top: 20px;
+	right: 20px;
+}
+
+
+#theme-switch-icon{
+	display: table-cell;
+	vertical-align: middle;
+	text-align: center;
+	font-size: 30px;
+	color: darkgoldenrod;
 }
