--- a/css/style-light.css
+++ b/css/style-light.css
@@ -44,23 +44,32 @@ h1::after {
 }
 /*panel 1 items*/
 #author_name{
+	opacity: 0;
 	font-family: 'Inter';
 	font-style:  normal;
 	font-weight: 800;
 	font-display: swap;
 	font-size: 2rem;
 	font-size: clamp(40px, 8vw, 80px);
-	color: #000;
+	color: #ccd6f6;
+	animation: fadeUp 0.5s;
+	animation-delay: 2.2s;
+	animation-fill-mode: forwards;
 }
 #author_description{
+	opacity: 0;
 	font-family: 'Inter';
 	font-style:  normal;
 	font-weight: 500;
 	font-display: swap;
 	color: #5e5a57;
+	animation: fadeUp 0.7s;
+	animation-delay: 2.5s;
+	animation-fill-mode: forwards;
 }
 /*buttons*/
 .contact-1{
+	opacity: 0;
 	background-color: transparent;
 	padding: 15px;
 	border: solid 1.5px #fd5918;
@@ -70,6 +79,9 @@ h1::after {
 	font-family: SF Mono;
 	font-weight: 700;
 	font-size: 18px;
+	animation: fadeUp 0.7s;
+	animation-delay: 2.7s;
+	animation-fill-mode: forwards;
 }
 .contact-1:hover{
 	background-color: #fd591842;
@@ -86,6 +98,11 @@ h1::after {
 	}
 }
 .inner_content{
+	opacity: 0;
+	animation: fadeUp 0.7s;
+	animation-delay: 3s;
+	animation-fill-mode: forwards;
+	margin: 0px 130px 0px 130px;
 	margin: 0px 130px 0px 130px;
 }
 @media only screen and (max-width: 1150px) and (min-width: 0px){
@@ -95,6 +112,7 @@ h1::after {
 }
 /*titles*/
 .inner_content_title {
+	opacity: 0;
 	font-family: 'Inter';
 	font-style: normal;
 	font-weight: 900;
@@ -102,6 +120,9 @@ h1::after {
 	color: #f46a16;
 	font-size: 50px;
 	margin-bottom: 10px;
+	animation: fadeUp 0.7s;
+	animation-delay: 1.7s;
+	animation-fill-mode: forwards;
 }
 .inner_content_paragraphs{
 	margin: 0px 69px 0px 69px;
@@ -238,7 +259,6 @@ h1::after {
 		margin: -10px 0px 15px 0px;
 		padding: 20px;
 		border-radius: 7px;
-		border: solid 1px #2e646ca3;
 		color: #1e1d1d;;
 		font-size: 18px;
 	}
@@ -336,6 +356,10 @@ span{
 	top: 20px;
 	right: 20px;
 	cursor: pointer;
+	transform: translateX(80px) translateY(-80px);
+	animation: themeswitch 0.4s;
+	animation-delay: 2.2s;
+	animation-fill-mode: forwards;
 }
 #theme-switch-icon{
 	display: table-cell;
