--- a/css/animations.css
+++ b/css/animations.css
@@ -6,3 +6,19 @@
 	from {opacity: 0;margin-top: 50px;}
 	to {opacity: 1;margin-top: unset;}
 }
+@keyframes typewriter{
+	from{width: 0;}
+	to{width: 11.3em;}
+}
+@keyframes blinkTextCursor{
+	from{border-right-color: rgba(0, 255, 0, 0.75);}
+	to{border-right-color: transparent;}
+}
+@keyframes typewriter{
+	from{width: 0;}
+	to{width: 11.3em;}
+}
+@keyframes blinkTextCursor{
+	from{border-right-color: rgba(0, 255, 0, 0.75);}
+	to{border-right-color: transparent;}
+}
