--- a/css/style-light.css
+++ b/css/style-light.css
@@ -51,7 +51,6 @@ h1::after {
 	font-display: swap;
 	font-size: 2rem;
 	font-size: clamp(40px, 8vw, 80px);
-	color: #ccd6f6;
 	animation: fadeUp 0.5s;
 	animation-delay: 2.2s;
 	animation-fill-mode: forwards;
@@ -72,7 +71,7 @@ h1::after {
 	opacity: 0;
 	background-color: transparent;
 	padding: 15px;
-	border: solid 1.5px #fd5918;
+	border: solid 1.5px #000000;
 	border-radius: 8px;
 	cursor: pointer;
 	color: #5e5a57;
@@ -84,8 +83,8 @@ h1::after {
 	animation-fill-mode: forwards;
 }
 .contact-1:hover{
-	background-color: #fd591842;
-	color: #5e5a57;
+	background-color: #00000042;
+	color: #000000;
 	transition: 100ms ease-in;
 }
 /*inner-contents*/
@@ -103,7 +102,6 @@ h1::after {
 	animation-delay: 3s;
 	animation-fill-mode: forwards;
 	margin: 0px 130px 0px 130px;
-	margin: 0px 130px 0px 130px;
 }
 @media only screen and (max-width: 1150px) and (min-width: 0px){
 	.inner_content{
@@ -112,7 +110,6 @@ h1::after {
 }
 /*titles*/
 .inner_content_title {
-	opacity: 0;
 	font-family: 'Inter';
 	font-style: normal;
 	font-weight: 900;
@@ -120,9 +117,6 @@ h1::after {
 	color: #f46a16;
 	font-size: 50px;
 	margin-bottom: 10px;
-	animation: fadeUp 0.7s;
-	animation-delay: 1.7s;
-	animation-fill-mode: forwards;
 }
 .inner_content_paragraphs{
 	margin: 0px 69px 0px 69px;
@@ -144,8 +138,7 @@ h1::after {
 
 /*projects*/
 .project_photo{
-	background: rgb(0,41,83);
-	background: linear-gradient(249deg, rgba(0,41,83,1) 0%, rgba(11,19,48,1) 100%); 
+	background: #000000;
 	height: auto;
 	display: inline-block;
 	width: 49%;
@@ -217,7 +210,6 @@ h1::after {
 		display: inline-block;
 		width: 100%;
 		height: 100px;
-		border-radius: 7px 7px 0px 0px;
 		vertical-align: top;
 		margin-bottom: 0px;
 		font-weight: 700;
@@ -287,7 +279,7 @@ span{
 	font-weight: 500;
 	margin-right: 40px;
 	margin: 0px 0px 20px -30px;
-	background-color: #112240;
+	background-color: #17191b;
 	padding: 20px;
 	border-radius: 7px;
 	box-shadow: 10px 10px 23px -4px rgba(0,0,0,0.75);
@@ -308,19 +300,12 @@ span{
 	animation: typewriter 2s steps(18) 0s 1 normal both,
 	blinkTextCursor 600ms steps(20) infinite normal;
 }
-@keyframes typewriter{
-	from{width: 0;}
-	to{width: 11.3em;}
-}
-@keyframes blinkTextCursor{
-	from{border-right-color: rgba(0, 255, 0, 0.75);}
-	to{border-right-color: transparent;}
-}
+
 /*modals*/
 .contact-2{
 	background-color: transparent;
 	padding: 10px;
-	border: solid 1.5px #fd5918;
+	border: solid 1.5px #000000;
 	border-radius: 8px;
 	cursor: pointer;
 	color: #5e5a57;
@@ -330,20 +315,20 @@ span{
 	margin: 10px 0 0 10px;
 }
 .contact-2:hover{
-	background-color: #fd591842;
-	color: #fff;
+	background-color: #00000042;
+	color: #000000;
 	transition: 300ms ease-in;
 }
 #bottom{
 	text-align: center;
 	padding: 4px;
-	background: #ccd6f6;;
+	background: #ffffff;;
 	margin: 20px 50px 20px 50px;
 	border-radius: 8px;
 	font-weight: 500;
 }
 #contact-info{
-	color:#5e5a57;
+	color:#1e1d1d;
 	text-align: center;
 }
 #theme-switch{
