--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,6 @@ h1::after {
 		display: inline-block;
 		width: 100%;
 		height: 100px;
-		border-radius: 7px 7px 0px 0px;
 		vertical-align: top;
 		margin-bottom: 0px;
 		font-weight: 700;
@@ -306,14 +305,7 @@ span{
 	animation: typewriter 2s steps(18) 0s 1 normal both,
 	blinkTextCursor 600ms steps(20) infinite normal;
 }
-@keyframes typewriter{
-	from{width: 0;}
-	to{width: 11.3em;}
-}
-@keyframes blinkTextCursor{
-	from{border-right-color: rgba(0, 255, 0, 0.75);}
-	to{border-right-color: transparent;}
-}
+
 /*modals*/
 .contact-2{
 	background-color: transparent;
@@ -335,7 +327,7 @@ span{
 #bottom{
 	text-align: center;
 	padding: 4px;
-	background: #ccd6f6;;
+	background: #031024;;
 	margin: 20px 50px 20px 50px;
 	border-radius: 8px;
 	font-weight: 500;
