--- a/css/style-light.css
+++ b/css/style-light.css
@@ -1,5 +1,5 @@
 html{
-	background-color: #fff;
+	background-color: #d5e5f780;
 	font-family: 'Inter';
 	font-style:  normal;
 	font-weight: 400;
@@ -44,6 +44,7 @@ h1::after {
 }
 /*panel 1 items*/
 #author_name{
+	margin-bottom: 3px;
 	opacity: 0;
 	font-family: 'Inter';
 	font-style:  normal;
@@ -52,6 +53,16 @@ h1::after {
 	font-size: 2rem;
 	font-size: clamp(40px, 8vw, 80px);
 	animation: fadeUp 0.5s;
+	animation-delay: 2.2s;
+	animation-fill-mode: forwards;
+}
+#course{
+	opacity: 0;
+	font-weight: 600;
+    font-size: 25px;
+    line-height: 14px;
+    color: #135aaa;
+    animation: fadeUp 0.5s;
 	animation-delay: 2.2s;
 	animation-fill-mode: forwards;
 }
@@ -287,7 +298,9 @@ span{
 #greet{
 	font-family: SF Mono;
 	color: #f46a16;
-	font-size: 18.69px;
+	font-size: clamp(18px,4.5vw,25px);
+	margin-bottom: 0px;
+	margin-left: 15px;
 }
 .line-1{
 	border-right: 8px solid;
@@ -336,7 +349,11 @@ span{
 	display: table;
 	width: 50px;
 	height: 50px;
-	background-color: #031024;
+	background: rgb(3,16,36);
+background: -moz-linear-gradient(90deg, rgba(3,16,36,1) 58%, rgba(18,43,47,1) 100%);
+background: -webkit-linear-gradient(90deg, rgba(3,16,36,1) 58%, rgba(18,43,47,1) 100%);
+background: linear-gradient(90deg, rgba(3,16,36,1) 58%, rgba(18,43,47,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#031024",endColorstr="#122b2f",GradientType=1);
 	border-radius: 999px;
 	top: 20px;
 	right: 20px;
