--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 html{
-	background-color: #031024;
+	background: rgb(3,16,36);
+background: -moz-linear-gradient(90deg, rgba(3,16,36,1) 58%, rgba(18,43,47,1) 100%);
+background: -webkit-linear-gradient(90deg, rgba(3,16,36,1) 58%, rgba(18,43,47,1) 100%);
+background: linear-gradient(90deg, rgba(3,16,36,1) 58%, rgba(18,43,47,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#031024",endColorstr="#122b2f",GradientType=1);
 	font-family: 'Inter';
 	font-style:  normal;
 	font-weight: 400;
@@ -44,6 +48,7 @@ h1::after {
 }
 /*panel 1 items*/
 #author_name{
+	margin-bottom: 3px;
 	opacity: 0;
 	font-family: 'Inter';
 	font-style:  normal;
@@ -53,6 +58,16 @@ h1::after {
 	font-size: clamp(40px, 8vw, 80px);
 	color: #ccd6f6;
 	animation: fadeUp 0.7s;
+	animation-delay: 2.2s;
+	animation-fill-mode: forwards;
+}
+#course{
+	opacity: 0;
+	font-weight: 600;
+    font-size: 25px;
+    line-height: 14px;
+    color: #135aaa;
+    animation: fadeUp 0.5s;
 	animation-delay: 2.2s;
 	animation-fill-mode: forwards;
 }
@@ -292,7 +307,9 @@ span{
 	font-family: SF Mono;
 	font-weight: 400;
 	color: #f46a16;
-	font-size: 18.69px;
+	font-size: clamp(18px,4.5vw,25px);
+	margin-bottom: 0px;
+	margin-left: 15px;
 }
 .line-1{
 	border-right: 8px solid;
@@ -327,7 +344,11 @@ span{
 #bottom{
 	text-align: center;
 	padding: 4px;
-	background: #031024;;
+	background: rgb(3,16,36);
+background: -moz-linear-gradient(90deg, rgba(3,16,36,1) 58%, rgba(18,43,47,1) 100%);
+background: -webkit-linear-gradient(90deg, rgba(3,16,36,1) 58%, rgba(18,43,47,1) 100%);
+background: linear-gradient(90deg, rgba(3,16,36,1) 58%, rgba(18,43,47,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#031024",endColorstr="#122b2f",GradientType=1);
 	margin: 20px 50px 20px 50px;
 	border-radius: 8px;
 	font-weight: 500;
