--- a/assets/css/animations.css
+++ b/assets/css/animations.css
@@ -1,11 +1,12 @@
 @keyframes themeswitch{
-	from {transform: translateX(80px) translateY(-80px);}
-	to {transform: translateX(0px) translateY(0px);}
+	from {opacity: 0;transform: perspective(50px) translateZ(-50px);}
+	to {opacity: 1; transform: perspective(0px) translateZ(0px);}
 }
 @keyframes fadeUp{
-	from {opacity: 0;margin-top: 50px;}
-	to {opacity: 1;margin-top: unset;}
+	from {opacity: 0; margin-top: 20px; transform: perspective(50px) translateZ(-5px);}
+	to {opacity: 1; margin-top: unset; transform: perspective(50px) translateZ(0px);}
 }
+
 @keyframes typewriter{
 	from{width: 0;}
 	to{width: 11.3em;}
