--- a/assets/css/style-light.css
+++ b/assets/css/style-light.css
@@ -6,6 +6,7 @@ html{
 	font-display: swap;
 	user-select: none;
 	scroll-behavior: smooth;
+	max-width: 3000px;
 }
 /*global*/
 #panel{
@@ -185,8 +186,6 @@ h1::after {
 	z-index: -1;
 }
 #project-3-img{
-	margin: 30px 0px -10px 0px;
-	height: 250px;
 	position: relative;
 	z-index: -1;
 }
@@ -231,7 +230,7 @@ span{
 	font-weight: 500;
 	margin-right: 40px;
 	margin: 0px 0px 20px -30px;
-	background: #3d3d46;
+	background: #081f33;
 	padding: 20px;
 	border-radius: 7px;
 	box-shadow: 10px 10px 23px -4px rgba(0,0,0,0.75);
@@ -311,7 +310,7 @@ span{
 	color: #fff;
 }
 #greet-wrap{
-	animation: greetAnim 1s;
+	animation: greetAnim 1.69s;
 }
 /*res*/
 @media only screen and (max-width: 800px) and (min-width: 0px){
@@ -340,7 +339,7 @@ span{
 		opacity: 0.2;
 	}
 	#project-3-img{
-		margin: -85px 120px;
+		margin: -85px 30px;
 		opacity: 0.2;
 	}
 	#project-4-img{
