--- a/assets/css/style-light.css
+++ b/assets/css/style-light.css
@@ -8,6 +8,10 @@ html{
 	scroll-behavior: smooth;
 	max-width: 3000px;
 }
+img{
+	max-height: 100%;
+	max-width: 100%;
+}
 /*global*/
 #panel{
 	padding: 75px 100px 0px 100px;
@@ -179,9 +183,7 @@ h1::after {
 }
 /*images*/
 #project-2-img{
-	height: 400px;
 	text-align: ;
-	margin: 30px 0px 0px 130px;
 	position: relative;
 	z-index: -1;
 }
