--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,6 +8,7 @@ body {
 	overflow-x: hidden;
 }
 p{margin: 10px 0px;}
+i{cursor: pointer;}
 .main {
 	position: fixed;
 	width: 65%;
@@ -45,7 +46,7 @@ p{margin: 10px 0px;}
 
 .greet-type{
 	position: absolute;
-	top: 145px;
+	top: 147px;
 	font-size: 35px;
 	font-weight: bold;
 	font-family: monospace;
@@ -78,6 +79,9 @@ li{
 ul {
   list-style: none;
   padding: 0;
+  animation: authorAnim 1s;
+	animation-delay: 3s;
+	animation-fill-mode: forwards;
 }
 
 li {
@@ -85,7 +89,7 @@ li {
   zoom: 1;
   *display: inline;
   padding: 0px;
-  color: white;
+  color: #c0d9ee;
 }
 a.color1:hover { color: #ff0000; }
 a.color2:hover { color: #0050b5; }
@@ -135,6 +139,18 @@ button:focus{
 	background: #0c4d9e;
     color: #fcfcfc;
 }
+.social{
+	opacity: 0;
+	position: fixed;
+    bottom: 10px;
+    color: #bfd8ed;
+    font-size: 25px;
+    width: 100%;
+    text-align: center;
+    animation: socialAnim 1s;
+    animation-delay: 3.6s;
+	animation-fill-mode: forwards;
+}
 /*mobile*/
 @media only screen and (max-width: 1200px) {
 	.main {
@@ -155,6 +171,9 @@ button:focus{
 	button{
 		margin-top: 5px;
 		font-size: 3.2vw;
+	}
+	.greet-type{
+		top: 150px;
 	}
 
 }
