--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -56,7 +56,7 @@ i{cursor: pointer;}
 }
 .line-1{  
 	width: 11.1em;
-	border-right: 13px solid #0aec11;
+	border-right: 25px solid #0aec11;
 	font-size: clamp(1.2rem, 6vw, 2.4rem);	
 	white-space: nowrap;
 	overflow: hidden;
@@ -112,43 +112,39 @@ a.color10:hover {color: #a4093a;}
 	animation-fill-mode: forwards;
 }
 .anim-typewriter{
-	animation: typewriter 2s steps(19) 1s 1 normal both, blinkTextCursor 530ms steps(2) infinite normal;
+	animation: typewriter 2s steps(19) 1s 1 normal both, blinkTextCursor 800ms steps(2) infinite normal;
 }
-button{
-	opacity: 0;
-	padding: 14px 11px 14px 11px;
-	font-family: 'Press Start 2P';
-	margin-top: 20px;
-	font-size: 1.3vw;
-	font-weight: bold;
-	background: #a5a5a5;
-	border: none;
-	animation: buttonAnim 1s;
-	animation-delay: 3.4s;
-	animation-fill-mode: forwards;
-	transition: background 0.6s, color 0.6s;
-	cursor: pointer;
+button {
+    opacity: 0;
+    padding: 14px 11px 14px 11px;
+    font-family: 'Press Start 2P';
+    margin-top: 20px;
+    font-size: 1.3vw;
+    background: #ff3b00;
+    border: none;
+    color: cornsilk;
+    animation: buttonAnim 1s;
+    animation-delay: 3.4s;
+    animation-fill-mode: forwards;
+    cursor: pointer;
 }
-button:hover {
-    background: #0c4d9e;
+button:hover, button:focus {
+    background: #9e2e0c; /* orange */
     color: #fcfcfc;
 }
-button:focus{
-	outline: #0beb12 solid 5px;
-	background: #0c4d9e;
-    color: #fcfcfc;
-}
-.social{
-	opacity: 0;
-	position: fixed;
+.social {
+    opacity: 0;
+    position: fixed;
     bottom: 10px;
-    color: #bfd8ed;
+    color: #ff7635;
     font-size: 25px;
     width: 100%;
     text-align: center;
     animation: socialAnim 1s;
     animation-delay: 3.6s;
-	animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    border-top: solid 1px;
+    padding-top: 10px;
 }
 /*mobile*/
 @media only screen and (max-width: 1200px) {
