--- a/css/style.css
+++ b/css/style.css
@@ -1,380 +1,24 @@
-/* 01 IMPORT FONT FAMILY
---------------------------------------------------------------- */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;800&display=swap');
+/* Harold Pescuela */
 
-/* 02 CSS RESET
---------------------------------------------------------------- */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+body{
 	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-	user-select:none;
 }
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-/* 03 GENERAL SETTINGS
---------------------------------------------------------------- */
-
-* {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-}
-
-.clear{
-	clear: both;
-}
-
-.left { float: left; }
-.right { float: right; }
-
-body {
-	background: #131418; /* Default background color */
-	font: 400 20px 'Inter', Arial;
-	color: #999; /* Text color */
-	text-rendering: optimizeLegibility;
-}
-
-p {
-	line-height: 1.7;
-}
-
-::selection {
-	background: #131418; /* Selection background color */
-	color: #fff; /* Selection text color */
-}
-::-moz-selection {
-	background: #131418; /* Selection background color */
-	color: #fff; /* Selection text color */
-}
-
-a {
-	color: #131418; /* Link color */
-	text-decoration: none;
-	-webkit-transition: all 0.3s linear;
-	-moz-transition: all 0.3s linear;
-	-o-transition: all 0.3s linear;
-	-ms-transition: all 0.3s linear;
-	transition: all 0.3s linear
-}
-
-a:hover { color: #1abc9c; } /* Link hover color */
-
-.behance:hover { color: #1769ff; } /* Behance link hover color */
-.dribbble:hover { color: #ea4c89; } /* Dribbble link hover color */
-.twitter:hover { color: #55acee; } /* Twitter link hover color */
-
-img {
-	max-width: 100%;
-	height: auto;
-}
-
-h1, h2, h3, h4, h5, h6 { color: #131418; /* Default title color */ }
-
-h1 { font-size: 30px; font-weight: 800;}
-
-/* Fade-in Animation */
-@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
- 
-.fade-in {
-    opacity:0;
-    -webkit-animation:fadeIn ease-in 1;
-    -moz-animation:fadeIn ease-in 1;
-    animation:fadeIn ease-in 1;
-    -webkit-animation-fill-mode:forwards;
-    -moz-animation-fill-mode:forwards;
-    animation-fill-mode:forwards;
-    -webkit-animation-duration:1s;
-    -moz-animation-duration:1s;
-    animation-duration:1s;
-}
-
-.fade-in.one {
-	-webkit-animation-delay: 0.5s;
-	-moz-animation-delay: 0.5s;
-	animation-delay: 0.5s;
-}
- 
-.fade-in.two {
-	-webkit-animation-delay: 1s;
-	-moz-animation-delay: 1s;
-	animation-delay: 1s;
-}
- 
-.fade-in.three {
-	-webkit-animation-delay: 1.5s;
-	-moz-animation-delay: 1.5s;
-	animation-delay: 1.5s;
-}
-
-/* Vertical centering */
-.parent {
-	display: table;
+.topbar{
+	position: fixed;
 	width: 100%;
-	height: 100vh;
+	height: 45px;
+	border-bottom: 3px solid #000;
 }
-
-.child {
-    display: table-cell;
-    vertical-align: middle;
-}	
-
-#full {
-	background: #fff; /* Main background color */
-	width: 100%;
-	max-width: 750px;
-	margin: 0 auto;
-	border-radius: 20px;
-}
-
-/* 04 HEADER SETTINGS
---------------------------------------------------------------- */
-
-header {
-	position: relative;
-	padding: 0 50px;
-	min-height: 150px;
-	line-height: 150px;
-}
-
-header h1 { padding: 0 0 0 125px; }
-
-header img {
-	width: 100px;
-	height: 100px;
-	vertical-align: middle; 
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	border-radius: 50%;
-}
-
-.email {
-	position: absolute;
-	top: 0;
-	right: 50px;
-	font-size: 30px;
-}
-
-/* 05 CONTENT SETTINGS
---------------------------------------------------------------- */
-
-#content {
-	background: #f1f1f1; /* Content background color */
-	padding: 50px 50px 35px;
-}
-
-.shots { margin: 25px 0 0 0; }
-
-.shots article {
-	width: 23%;
-	margin: 1% 1% 15px;
-	position: relative;
-	background: #fff;
-	line-height: 0;
-	border: 5px solid #fff;
-	-webkit-box-shadow: 0 6px 6px -6px #d7d7d7;
-	-moz-box-shadow: 0 6px 6px -6px #d7d7d7;
-	box-shadow: 0 6px 6px -6px #d7d7d7;
-}
-
-.behance_project, 
-.dribbble_project {
-	opacity: 0;
-	position: absolute;
-	left: 0;
-	right: 0;
+.bottombar{
+	position: fixed;
 	bottom: 0;
-	top: 0;
-	margin: 0;
-	line-height: 50%; 
+	width: 100%;
+	height: 25px;
+	background-color: #000;
+	text-align: center;
+}
+.bottombar > p{
 	color: #fff;
-	transition: 0.6s;
-	-webkit-transition: 0.6s;
-	-moz-transition: 0.6s;
-	-o-transition: 0.6s;
-	-ms-transition: 0.6s;
-}
-
-.behance_project { background: #1769ff; /* Behance shot hover background color */ }
-.dribbble_project { background: #ea4c89; /* Dribbble shot hover background color */ }
-
-.behance_project:hover,
-.dribbble_project:hover {
-	opacity: 1;
-}
-
-.behance_project img,
-.dribbble_project img {
-	position: absolute;
-	overflow: auto;
-	margin: auto;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-}
-
-/* 06 FOOTER SETTINGS
---------------------------------------------------------------- */
-
-footer {
-	padding: 0 50px;
-	min-height: 100px;
-	line-height: 100px;
-	font-size: 18px;
-	color: #131418; /* Footer text color */
-}
-
-.copyright { width: 50%; }
-
-.social {
-	width: 50%;
-	text-align: right;
-}
-
-.social .fa { margin: 0 15px; }
-.social .fa:first-child { margin: 0 15px 0 0 }
-.social .fa:last-child { margin: 0 0 0 15px }
-
-/* 07 RESPONSIVE SETTINGS
---------------------------------------------------------------- */
-
-/* Width */
-@media (max-width: 720px) {
-	body { font-size: 18px; }
-
-	h1 { font-size: 26px; }
-
-	header { padding: 0 25px; }
-	
-	header h1 { padding: 0 0 0 115px; }
-	
-	#full { border: 10px solid #131418; }
-
-	.email {
-		right: 25px;
-		font-size: 26px;
-	}
-
-	#content { padding: 50px 25px 35px; }
-	
-	.shots article {
-		width: 31%; 
-
-	}
-
-	footer {
-		padding: 0 25px;
-		font-size: 16px;
-	}
-}
-
-@media (max-width: 180px) {
-
-	.shots article { width: 48%; }
-	
-	.parent {
-		display: block;
-		width: auto;
-		height: auto;
-	}
-
-	.child {
-		display: block;
-		vertical-align: middle;
-	}
-}
-
-@media (max-width: 184px) {
-	header {
-		padding: 50px 25px;
-		min-height: auto;
-		line-height: 1;
-	}
-
-	header .left {
-		width: 100%;
-		float: none;
-		text-align: center;
-	}
-
-	header h1 {
-		margin: 25px 0 0 0;
-		padding: 0;
-		text-align: center;
-	}
-
-	header img {
-		width: 150px;
-		height: 150px;
-		vertical-align: none;
-	}
-
-	.email {
-		top: 25px;
-		right: 25px;
-	}
-
-	.shots article { width: 100%; margin: 0 0 15px; }
-	
-	footer {
-		min-height: auto;
-		padding: 50px 25px;
-		line-height: 1;
-	}
-	
-	.copyright {
-		width: 100%;
-		margin: 0 0 25px;
-		text-align: center;
-	}
-
-	.social {
-		width: 100%;
-		text-align: center;
-	}
-}
-
-/* Height */
- @media screen and (min-height: 960px) {
-	#full {width: 90%; }
+	margin: 0 auto;
+	padding: 3px;
 }
