--- a/css/style.css
+++ b/css/style.css
@@ -5,20 +5,30 @@ body{
 }
 .topbar{
 	position: fixed;
+	z-index: 100;
 	width: 100%;
 	height: 45px;
 	border-bottom: 3px solid #000;
+	background-color: #fff;
 }
 .bottombar{
 	position: fixed;
 	bottom: 0;
 	width: 100%;
-	height: 25px;
+	height: 23px;
 	background-color: #000;
 	text-align: center;
 }
 .bottombar > p{
-	color: #fff;
+	font-family: 'Inter', sans-serif;
+	color: rgb(201, 201, 201);
 	margin: 0 auto;
 	padding: 3px;
+	font-weight: 700;
+}
+.panel-1{
+	width: 100%;
+	height: 30%;
+	background-color: pink;
+
 }
