--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,67 @@
 /* Harold Pescuela */
 
 body{
-	margin: 0;
+	margin:  0;
 }
-.topbar{
-	position: fixed;
-	z-index: 100;
+.header{
 	width: 100%;
-	height: 45px;
-	border-bottom: 3px solid #000;
-	background-color: #fff;
+	text-align: center;
+	padding: 10px 0px 5px 0px;
 }
-.bottombar{
+.header > span{
+	margin-left: 25px;
+}
+.main{
+	width: 40%;
+	height: 100%;
+	margin: 0 auto;
+	padding: 15px
+}
+@media only screen and (max-width: 900px) {
+	.main{
+		width: 90%;
+		height: 100%;
+		margin: 0 auto;
+		padding: 15px
+	}
+}
+@media only screen and (min-width: 800px) and (max-width: 1100px) {
+	.main{
+		width: 60%;
+		height: 100%;
+		margin: 0 auto;
+		padding: 15px
+	}
+}
+h1{
+	font-family: 'Inter', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-weight: 800;
+}
+.intro{
+	margin-top: 30px;
+	width: 50%;
+	
+}
+.social{
+	margin-top: 30px;
+	width: 50%;
+}	
+.footer{
 	position: fixed;
 	bottom: 0;
-	width: 100%;
-	height: 23px;
-	background-color: #000;
 	text-align: center;
-}
-.bottombar > p{
-	font-family: 'Inter', sans-serif;
-	color: rgb(201, 201, 201);
-	margin: 0 auto;
-	padding: 3px;
-	font-weight: 700;
-}
-.panel-1{
 	width: 100%;
-	height: 30%;
-	background-color: pink;
-
+	font-size: 12px;
+}
+hr{
+	opacity: 0.69;
+}
+a{
+	text-decoration: none;
+	color: #000;
+}
+a:hover{
+	color: rgb(255, 255, 255);
+	background-color: rgb(219, 69, 0);
+	transition: 0.5s;
 }
