--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
 /* Harold Pescuela */
 
+html{
+	user-select: none
+}
 body{
 	font-family: 'Inter', 'sans-serif';
 	margin:  0;
 }
 .header{
+	font-family: 'Roboto Mono', monospace;
 	width: 100%;
 	text-align: center;
 	padding: 10px 0px 5px 0px;
@@ -43,7 +47,11 @@ h1{
 	width: 50%;
 	
 }
+.skills{
+	font-family: 'Roboto Mono', monospace;
+}
 .social{
+	font-family: 'Roboto Mono', monospace;
 	margin-top: 30px;
 	width: 50%;
 }	
@@ -53,6 +61,7 @@ h1{
 	text-align: center;
 	width: 100%;
 	font-size: 12px;
+	font-family: 'Roboto Mono', monospace;
 }
 hr{
 	opacity: 0.69;
