--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,13 @@ body{
 	font-family: 'Roboto Mono', monospace;
 	width: 100%;
 	text-align: center;
-	padding: 10px 0px 5px 0px;
+	padding: 10px 0px 10px 0px;
 	font-weight: 400;
+	position: sticky;
+	top: 0;
+	z-index: 1;
+	border-bottom: solid 1px #b9b9b9;
+	background-color: #fff;
 }
 .header > span{
 	margin-left: 25px;
