--- a/css/tab.css
+++ b/css/tab.css
@@ -6,7 +6,7 @@ ul.tabs
     margin:0;
     list-style-type: none;
     text-align: center; /*set to left, center, or right to align the tabs as desired*/
-    border:1px solid rgb(0, 0, 0);
+    border:1px solid rgb(255 118 0);
     border-bottom:none;
     background:#BBBBBB;
 }
@@ -24,7 +24,7 @@ ul.tabs li a
     text-decoration: none;
     position: relative;
     padding: 8px 20px;
-    border: 1px solid rgb(0, 0, 0);
+    border: 1px solid rgb(255 118 0);
     border-right:none;
     color: #000;
     background: #FFF;
@@ -33,7 +33,7 @@ ul.tabs li a
        
 ul.tabs li:last-child a
 {
-    border-right:1px solid rgb(0, 0, 0);
+    border-right:1px solid rgb(255 118 0);
 } 
         
 ul.tabs li a:visited
@@ -52,7 +52,7 @@ ul.tabs li.selected a, ul.tabs li.selected a:hover
     position: relative;
     top: 0px;
     font-weight:bold;
-    background: rgb(0, 0, 0);
+    background: rgb(255 118 0);
     color:White;
 }
         
@@ -67,5 +67,5 @@ div.tabcontents
     border: 1px solid rgb(0, 0, 0);
     border-top: 2px solid rgb(0, 0, 0);
     padding: 30px;
-    background-color:#FFF;
+    transition: 0.5s;
 }
